# ptybox

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  clippy.toml  deny.toml  rustfmt.toml
.cargo/: config.toml
.claude/commands/: tui-test.md
.github/workflows/: ci.yml  docs.yml  nightly.yml  release.yml
crates/ptybox/: Cargo.toml
crates/ptybox-cli/: Cargo.toml
crates/ptybox-cli/src/: main.rs  progress.rs  protocol_help.rs  session_client.rs  trace.rs
crates/ptybox-cli/src/tui_mode/: mod.rs
crates/ptybox-cli/tests/: cli_budgets.rs  cli_color.rs  cli_completions.rs  cli_container_smoke.rs  cli_docs_sync.rs  cli_driver.rs  cli_exec.rs  cli_fixtures.rs  cli_help.rs  cli_protocol_help.rs  cli_replay.rs  cli_run.rs  cli_trace.rs  cli_tui.rs  cli_verbose.rs
crates/ptybox-fixtures/: Cargo.toml
crates/ptybox-fixtures/src/: builders.rs  helpers.rs  lib.rs
crates/ptybox/src/: actions.rs  lib.rs  util.rs
crates/ptybox/src/artifacts/: mod.rs
crates/ptybox/src/assertions/: mod.rs
crates/ptybox/src/driver/: mod.rs
crates/ptybox/src/model/: driver.rs  ids.rs  mod.rs  normalization.rs  policy.rs  run.rs  scenario.rs  terminal.rs
crates/ptybox/src/policy/: mod.rs  sandbox.rs
crates/ptybox/src/replay/: mod.rs
crates/ptybox/src/runner/: mod.rs  progress.rs
crates/ptybox/src/scenario/: mod.rs
crates/ptybox/src/serve/: mod.rs  protocol.rs
crates/ptybox/src/session/: mod.rs
crates/ptybox/src/terminal/: mod.rs
crates/ptybox/tests/: artifacts_unit.rs  assertions.rs  model_constructors.rs  policy_explain.rs  policy_safety.rs  replay_unit.rs  runner_integration.rs  sandbox_profile.rs  scenario_load.rs  session_unit.rs  spec_schemas.rs  terminal_snapshot.rs  wait_conditions.rs
crates/tui-use-cli/: Cargo.toml
crates/tui-use-cli/src/: main.rs  progress.rs  protocol_help.rs  trace.rs
crates/tui-use-cli/src/tui_mode/: mod.rs
crates/tui-use-cli/tests/: cli_budgets.rs  cli_color.rs  cli_completions.rs  cli_exec.rs  cli_fixtures.rs  cli_help.rs  cli_replay.rs  cli_run.rs  cli_trace.rs  cli_tui.rs  cli_verbose.rs
crates/tui-use-fixtures/: Cargo.toml
crates/tui-use-fixtures/src/: builders.rs  helpers.rs  lib.rs
crates/tui_use/: Cargo.toml
crates/tui_use/src/: lib.rs
crates/tui_use/src/artifacts/: mod.rs
crates/tui_use/src/assertions/: mod.rs
crates/tui_use/src/model/: ids.rs  mod.rs  normalization.rs  policy.rs  run.rs  scenario.rs  terminal.rs
crates/tui_use/src/policy/: mod.rs  sandbox.rs
crates/tui_use/src/replay/: mod.rs
crates/tui_use/src/runner/: mod.rs  progress.rs
crates/tui_use/src/scenario/: mod.rs
crates/tui_use/src/session/: mod.rs
crates/tui_use/src/terminal/: mod.rs
crates/tui_use/tests/: artifacts_unit.rs  assertions.rs  model_constructors.rs  policy_explain.rs  policy_safety.rs  replay_unit.rs  runner_integration.rs  sandbox_profile.rs  scenario_load.rs  session_unit.rs  spec_schemas.rs  terminal_snapshot.rs  wait_conditions.rs
docs/: book.toml
docs/src/: README.md  SUMMARY.md
docs/src/examples/: index.md
docs/src/getting-started/: first-scenario.md  installation.md  quick-start.md
docs/src/guides/: agent-tutorial.md  ai-agents.md  assertions.md  containers.md  policies.md  replay.md  sandbox.md  scenarios.md  threat-model.md  troubleshooting.md
docs/src/reference/: api.md  cli.md  error-codes.md  protocol.md
scripts/: container-smoke.sh  release-verify.sh
spec/: app_spec.txt  audit-checklist.md  ci.md  data-model.md  feature-list.json  plan.md  rust-style-guide.md  threat-model.md
spec/examples/: audio-extractor-help.json  audio-extractor-inline.json  audio-extractor-policy.json  normalization.json  policy-container.json  policy.json  replay.json
spec/schemas/: driver-request-v2.schema.json  driver-response-v2.schema.json  normalization.schema.json  observation.schema.json  policy.schema.json  replay.schema.json  run-result.schema.json  scenario.schema.json
