[workspace]
resolver = "2"
members = [
  "crates/tui_use",
  "crates/tui-use-cli",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
miette = { version = "7.2", features = ["fancy"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
portable-pty = "0.8"
vt100 = "0.15"
uuid = { version = "1.10", features = ["v4", "serde"] }
