[package]
name = "ptybox"
version = "0.1.0"
description = "Security-focused harness for driving terminal UI applications with deterministic snapshots"
readme = "../../README.md"
documentation = "https://docs.rs/ptybox"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
portable-pty = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
vt100 = { workspace = true }
regex = "1.10"
serde_yml = { workspace = true }
nix = { version = "0.29", default-features = false, features = ["fs", "signal"] }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
