[package]
name = "tui-use-cli"
version = "0.1.0"
description = "CLI for tui-use: security-focused TUI automation and testing"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "tui-use"
path = "src/main.rs"

[dependencies]
tui_use = { path = "../tui_use" }
clap = { workspace = true }
clap_complete = { workspace = true }
miette = { workspace = true }
supports-color = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
serde_yml = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
