[package]
name = "tui-use-fixtures"
version = "0.1.0"
description = "Test fixtures for tui-use TUI automation"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false  # Internal testing crate

[lib]
name = "tui_use_fixtures"
path = "src/lib.rs"

[[bin]]
name = "tui-use-echo-fixture"
path = "src/bin/echo_tui.rs"

[[bin]]
name = "tui-use-time-fixture"
path = "src/bin/time_tui.rs"

[[bin]]
name = "tui-use-echo-keys"
path = "src/bin/echo_keys.rs"

[[bin]]
name = "tui-use-show-size"
path = "src/bin/show_size.rs"

[[bin]]
name = "tui-use-delay-output"
path = "src/bin/delay_output.rs"

[[bin]]
name = "tui-use-exit-code"
path = "src/bin/exit_code.rs"

[[bin]]
name = "tui-use-alt-screen"
path = "src/bin/alt_screen.rs"

[[bin]]
name = "tui-use-unicode-test"
path = "src/bin/unicode_test.rs"

[dependencies]
libc = "0.2"
tui_use = { version = "0.1.0", path = "../tui_use" }
serde_json = { workspace = true }

[lints]
workspace = true
