[package]
name = "tui_use"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
portable-pty = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
vt100 = { workspace = true }
regex = "1.10"
serde_yaml = { workspace = true }
nix = { version = "0.25", default-features = false, features = ["fs"] }

[dev-dependencies]
serde_json = { workspace = true }
